feat: implementação de regra de negocio que verifica se um pedido já aprovado pode ser cancelado
